# actix-gym-training

./: .env  Cargo.toml  README.md  data.sql  docker-compose.yml  schema.sql  sqlx-data.json
.github/workflows/: rust.yml
migrations/: 20210113174939_schema.sql  20210113175002_data.sql
src/: config.rs  main.rs
src/models/: exercises.rs  mod.rs
src/routes/: base_routes.rs  exercises_routes.rs  mod.rs
