[package]
name = "actix-gym-training"
version = "0.1.0"
authors = ["BoudBoud47 <mehdi.boudart@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
futures = "0.3"
sqlx = { version = "0.4.2", features = [ "postgres", "runtime-actix-native-tls" ] }
#sqlx = { version = "0.3", features = [ "postgres" ] }
log = "0.4.0"
env_logger = "0.8.1"
dotenv = "0.15.0"
listenfd = "0.3.3"
anyhow = "1.0.37"